libs/modkit-canonical-errors/tests/ui/missing_resource_on_not_found.stderr
error[E0599]: the method `create` exists for struct `ResourceErrorBuilder<ResourceMissing, NoContext>`, but its trait bounds were not satisfied
  --> tests/ui/missing_resource_on_not_found.rs:10:63
   |
10 |     let _err = UserResourceError::not_found("User not found").create();
   |                                                               ^^^^^^ method cannot be called on `ResourceErrorBuilder<ResourceMissing, NoContext>` due to unsatisfied trait bounds
   |
  ::: src/builder.rs
   |
   | pub struct ResourceMissing;
   | -------------------------- doesn't satisfy `ResourceMissing: ResourceResolved`
   |
   = note: the following trait bounds were not satisfied:
           `ResourceMissing: ResourceResolved`
